--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -1,6 +1,11 @@
 server:
   address: 0.0.0.0
   port: 8081
+
+project:
+  name: Reptile Management API
+  version: 0.0.1-SNAPSHOT
+  description: RESTful API for managing reptile collections, feeding logs, weight tracking, and enclosures
   
 spring:
   application:
